[package]
name = "postimg"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
regex = "1.11"
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3.14"
